# i2m-std

./: README.md  pyproject.toml
scripts/: bundle.py
src/: __init__.py  batchbrowser.py  clearslot.py  filebrowser.py  main.py  reload.py  utilities.py
src/prefs/: addonprefs.py  props.py
src/ui/: __init__.py
tests/: __main__.py
