[project]
name = "i2m-std"
version = "1.3.0"
description = "Blender Addon - Image 2 Mesh"
authors = [{ name = "Wei Ji (FlySkyPie)", email = "c445dj544@gmail.com" }]
dependencies = ["bpy>=4.2.0", "mypy>=1.11.2", "ruff>=0.6.5"]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "GPL-3" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
build = "python scripts/bundle.py"
test = { composite = ["build", "python tests"] }
lint = { composite = ["mypy .", "ruff check"] }

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["valid-type"]
